--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Firebase Database for android
+  cloud_firestore: ^4.13.6
+  # Firebase Databse for web
+  firebase_core: ^2.24.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
